--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
                                                                    </style>
                                                                    <center>
                                                                        <span id="roulette"></span>
-                                                                       <div class="door__wrapper">
+                                                                       <div style="margin-bottom: 65px;" class="door__wrapper">
                                                                            <h2 class="door__title">
                                                                                توقع خلف أي باب سيكون التخفيض 65% 
                                                                            </h2>
